# hn_tracker

./: .dockerignore  .gitignore  README.md  cleanup_docker.sh  docker-compose-fe.yml  docker-compose-kafka.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: hn_tracker.code-workspace  main.rs  todo
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
minimal-fe/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  vite.config.js
minimal-fe/src/: App.jsx  BarChart.jsx  animations.css  main.jsx  styles.css
